force-app/main/default/objects/PuppetShow__c/fields/Show_Type__c.field-meta.xml
<CustomField>
    <fullName>Show_Type__c</fullName>
    <defaultValue>IF(

  $RecordType.Name = &quot;Puppet Digital Playdate&quot;,
&quot;Puppet Digital Playdate&quot;,&quot;&quot;)</defaultValue>
    <label>Show Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Metropolitan School Visit</fullName>
            </value>
            <value>
                <fullName>Country School Visit</fullName>
            </value>
            <value>
                <fullName>Hospital Visit</fullName>
            </value>
            <value>
                <fullName>Camp Quality Event - School Show</fullName>
            </value>
            <value>
                <fullName>Camp Quality Event - Program</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>Brand Relations</fullName>
            </value>
            <value>
                <fullName>Hospital Visit - No Puppets</fullName>
            </value>
            <value>
                <fullName>Puppet Digital Playdate</fullName>
            </value>
            <value>
                <fullName>Digital Content</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>