force-app/main/default/objects/PuppetShow__c/fields/Sound_equipment_required__c.field-meta.xml
<CustomField>
    <fullName>Sound_equipment_required__c</fullName>
    <label>Sound equipment required</label>
    <type>TextArea</type>
</CustomField>