force-app/main/default/objects/PuppetShow__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Captures response from How did you hear about Puppet Digital Playdates? on playdate request form on website</description>
    <label>Source</label>
    <length>200</length>
    <type>Text</type>
</CustomField>