force-app/main/default/objects/PuppetShow__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Start time of show (for hospital visits)</description>
    <inlineHelpText>Start time of show (for hospital visits)</inlineHelpText>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>