force-app/main/default/objects/PuppetShow__c/fields/Thank_You_Sent__c.field-meta.xml
<CustomField>
    <fullName>Thank_You_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Thank You Sent</label>
    <type>Checkbox</type>
</CustomField>