force-app/main/default/objects/PuppetShow__c/fields/Three_interest_areas_of_child__c.field-meta.xml
<CustomField>
    <fullName>Three_interest_areas_of_child__c</fullName>
    <label>Three interest areas of child</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>