force-app/main/default/objects/PuppetShow__c/fields/Turnout__c.field-meta.xml
<CustomField>
    <fullName>Turnout__c</fullName>
    <description>Description of show attendance (for hospital visits)</description>
    <inlineHelpText>Description of show attendance (for hospital visits)</inlineHelpText>
    <label>Show Turnout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Quiet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>