force-app/main/default/objects/PuppetShow__c/fields/Type_Of_Child__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Child__c</fullName>
    <formula>TEXT(Child_Requesting_Show__r.Family_Member_Type__c)</formula>
    <label>Type Of Child</label>
    <type>Text</type>
</CustomField>