force-app/main/default/objects/PuppetShow__c/fields/utm_campaign__c.field-meta.xml
<CustomField>
    <fullName>utm_campaign__c</fullName>
    <label>utm_campaign</label>
    <type>TextArea</type>
</CustomField>