force-app/main/default/objects/PuppetShow__c/fields/utm_source__c.field-meta.xml
<CustomField>
    <fullName>utm_source__c</fullName>
    <label>utm_source</label>
    <type>TextArea</type>
</CustomField>