force-app/main/default/objects/PuppetShow__c/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Venue</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Family</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Puppet Shows</relationshipLabel>
    <relationshipName>Puppet_Shows</relationshipName>
    <type>Lookup</type>
</CustomField>