force-app/main/default/objects/PuppetShow__c/fields/Venue_Details__c.field-meta.xml
<CustomField>
    <fullName>Venue_Details__c</fullName>
    <label>Venue Details</label>
    <type>TextArea</type>
</CustomField>