force-app/main/default/objects/PuppetShow__c/fields/Venue_State__c.field-meta.xml
<CustomField>
    <fullName>Venue_State__c</fullName>
    <formula>Venue__r.BillingState</formula>
    <label>Venue State</label>
    <type>Text</type>
</CustomField>