force-app/main/default/objects/PuppetShow__c/fields/Venue_Suburb__c.field-meta.xml
<CustomField>
    <fullName>Venue_Suburb__c</fullName>
    <formula>Venue__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Venue Suburb</label>
    <type>Text</type>
</CustomField>