force-app/main/default/objects/PuppetShow__c/recordTypes/Puppet_Digital_Playdate.recordType-meta.xml
<RecordType>
    <fullName>Puppet_Digital_Playdate</fullName>
    <active>true</active>
    <label>Puppet Digital Playdate</label>
</RecordType>