force-app/main/default/objects/PuppetShow__c/recordTypes/Puppet_Show.recordType-meta.xml
<RecordType>
    <fullName>Puppet_Show</fullName>
    <active>true</active>
    <label>Puppet Show</label>
</RecordType>