force-app/main/default/objects/PuppetShow__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Child_Requesting_Show__c</columns>
    <columns>Venue__c</columns>
    <columns>Show_Status__c</columns>
    <columns>Show_Date__c</columns>
    <columns>Show_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>School_Main_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>