force-app/main/default/objects/PuppetShow__c/listViews/All_Digital_Playdates.listView-meta.xml
<ListView>
    <fullName>All_Digital_Playdates</fullName>
    <columns>NAME</columns>
    <columns>Requestor__c</columns>
    <columns>Child_s_First_Name__c</columns>
    <columns>Child_s_Last_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Show_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Show_Type__c</field>
        <operation>equals</operation>
        <value>Puppet Digital Playdate</value>
    </filters>
    <label>All Digital Playdates</label>
</ListView>