force-app/main/default/objects/PuppetShow__c/listViews/Copy_of_Hospital_Visit_VIC_This_Year.listView-meta.xml
<ListView>
    <fullName>Copy_of_Hospital_Visit_VIC_This_Year</fullName>
    <columns>Puppet_Show_Name__c</columns>
    <columns>NAME</columns>
    <columns>Show_Type__c</columns>
    <columns>Venue__c</columns>
    <columns>Show_Date__c</columns>
    <columns>Show_Status__c</columns>
    <columns>Show_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Show_Type__c</field>
        <operation>equals</operation>
        <value>Hospital Visit,Hospital Visit - No Puppets</value>
    </filters>
    <filters>
        <field>Performance_Group__c</field>
        <operation>equals</operation>
        <value>VIC/TAS</value>
    </filters>
    <filters>
        <field>Show_Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>Hospital Visit VIC - This Year</label>
</ListView>