force-app/main/default/objects/PuppetShow__c/listViews/Copy_of_PDP_QLD_NEW_REQUESTS.listView-meta.xml
<ListView>
    <fullName>Copy_of_PDP_QLD_NEW_REQUESTS</fullName>
    <columns>NAME</columns>
    <columns>Puppet_Show_Name__c</columns>
    <columns>Child_Requesting_Show__c</columns>
    <columns>Age_Of_Child__c</columns>
    <columns>Type_Of_Child__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Show_Date__c</columns>
    <columns>Requestor__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PuppetShow__c.Puppet_Digital_Playdate</value>
    </filters>
    <filters>
        <field>Performance_Group__c</field>
        <operation>equals</operation>
        <value>QLD</value>
    </filters>
    <filters>
        <field>Show_Status__c</field>
        <operation>equals</operation>
        <value>Requested</value>
    </filters>
    <label>PDP - QLD - NEW REQUESTS</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Primary_School_Program_Manager</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>