force-app/main/default/objects/PuppetShow__c/listViews/Copy_of_PDP_SA_NT_ON_HOLD_CANCELLED.listView-meta.xml
<ListView>
    <fullName>Copy_of_PDP_SA_NT_ON_HOLD_CANCELLED</fullName>
    <columns>NAME</columns>
    <columns>Puppet_Show_Name__c</columns>
    <columns>Child_Requesting_Show__c</columns>
    <columns>Age_Of_Child__c</columns>
    <columns>Type_Of_Child__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Show_Date__c</columns>
    <columns>Requestor__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>Show_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PuppetShow__c.Puppet_Digital_Playdate</value>
    </filters>
    <filters>
        <field>Performance_Group__c</field>
        <operation>equals</operation>
        <value>WA</value>
    </filters>
    <filters>
        <field>Show_Status__c</field>
        <operation>equals</operation>
        <value>Cancelled,On Hold</value>
    </filters>
    <label>PDP - WA - ON HOLD/CANCELLED</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Primary_School_Program_Manager</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>