force-app/main/default/objects/PuppetShow__c/listViews/Copy_of_Puppet_Shows_WA_In_Progress.listView-meta.xml
<ListView>
    <fullName>Copy_of_Puppet_Shows_WA_In_Progress</fullName>
    <columns>NAME</columns>
    <columns>Venue__c</columns>
    <columns>Venue_Suburb__c</columns>
    <columns>Child_Requesting_Show__c</columns>
    <columns>Age_Of_Child__c</columns>
    <columns>Type_Of_Child__c</columns>
    <columns>Show_Date__c</columns>
    <columns>Show_Status__c</columns>
    <columns>Booking_Request_Notes__c</columns>
    <columns>Show_Priority__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>PuppetCampaign__c</columns>
    <columns>School_Main_Contact__c</columns>
    <columns>Show_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Show_Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <filters>
        <field>Performance_Group__c</field>
        <operation>equals</operation>
        <value>WA</value>
    </filters>
    <label>Puppet Shows WA - In Progress</label>
</ListView>