force-app/main/default/objects/PuppetShow__c/listViews/Digital_Playdates_Requested.listView-meta.xml
<ListView>
    <fullName>Digital_Playdates_Requested</fullName>
    <columns>NAME</columns>
    <columns>Requestor__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Show_Status__c</columns>
    <columns>Show_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PuppetShow__c.Puppet_Digital_Playdate</value>
    </filters>
    <filters>
        <field>Show_Status__c</field>
        <operation>equals</operation>
        <value>Requested,In Progress,Booked,Cancelled,On Hold</value>
    </filters>
    <filters>
        <field>Performance_Group__c</field>
        <operation>equals</operation>
        <value>QLD</value>
    </filters>
    <label>PDP Bookings QLD</label>
</ListView>