force-app/main/default/objects/PuppetShow__c/listViews/Hospital_Visit_SA_No_Puppets.listView-meta.xml
<ListView>
    <fullName>Hospital_Visit_SA_No_Puppets</fullName>
    <columns>NAME</columns>
    <columns>Venue__c</columns>
    <columns>Show_Date__c</columns>
    <columns>Show_Status__c</columns>
    <columns>Show_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Performance_Group__c</field>
        <operation>equals</operation>
        <value>SA/NT</value>
    </filters>
    <filters>
        <field>Show_Type__c</field>
        <operation>equals</operation>
        <value>Hospital Visit - No Puppets</value>
    </filters>
    <label>Hospital Visit SA - No Puppets</label>
    <sharedTo></sharedTo>
</ListView>