force-app/main/default/objects/PuppetShow__c/listViews/Hospital_Visit_VIC_no_Puppets.listView-meta.xml
<ListView>
    <fullName>Hospital_Visit_VIC_no_Puppets</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>Show_Type__c</columns>
    <columns>Venue__c</columns>
    <columns>RE_Event_ID__c</columns>
    <columns>Show_Date__c</columns>
    <columns>Show_Status__c</columns>
    <columns>Show_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Show_Type__c</field>
        <operation>equals</operation>
        <value>Hospital Visit,Hospital Visit - No Puppets</value>
    </filters>
    <filters>
        <field>Performance_Group__c</field>
        <operation>equals</operation>
        <value>VIC/TAS</value>
    </filters>
    <filters>
        <field>Show_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>Show_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:30</value>
    </filters>
    <label>Hospital Visit VIC - Recent</label>
</ListView>