force-app/main/default/objects/PuppetShow__c/listViews/Hospital_Visits_NSW.listView-meta.xml
<ListView>
    <fullName>Hospital_Visits_NSW</fullName>
    <columns>NAME</columns>
    <columns>Show_Date__c</columns>
    <columns>Show_Status__c</columns>
    <columns>Show_Type__c</columns>
    <columns>Venue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Performance_Group__c</field>
        <operation>equals</operation>
        <value>NSW/ACT</value>
    </filters>
    <filters>
        <field>Show_Type__c</field>
        <operation>equals</operation>
        <value>Hospital Visit,Hospital Visit - No Puppets</value>
    </filters>
    <filters>
        <field>Show_Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR,LAST_YEAR</value>
    </filters>
    <label>Hospital Visits NSW</label>
</ListView>