force-app/main/default/objects/PuppetShow__c/listViews/Hospital_Visits_Qld.listView-meta.xml
<ListView>
    <fullName>Hospital_Visits_Qld</fullName>
    <columns>NAME</columns>
    <columns>Venue__c</columns>
    <columns>Show_Date__c</columns>
    <columns>Show_Status__c</columns>
    <columns>Show_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Show_Type__c</field>
        <operation>equals</operation>
        <value>Hospital Visit</value>
    </filters>
    <filters>
        <field>Performance_Group__c</field>
        <operation>equals</operation>
        <value>QLD</value>
    </filters>
    <filters>
        <field>Show_Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>Hospital Visits Qld</label>
</ListView>