force-app/main/default/objects/PuppetShow__c/listViews/Hospital_Visits_QLD_no_Puppets.listView-meta.xml
<ListView>
    <fullName>Hospital_Visits_QLD_no_Puppets</fullName>
    <columns>NAME</columns>
    <columns>Show_Date__c</columns>
    <columns>Show_Type__c</columns>
    <columns>Venue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Performance_Group__c</field>
        <operation>equals</operation>
        <value>QLD</value>
    </filters>
    <filters>
        <field>Show_Type__c</field>
        <operation>equals</operation>
        <value>Hospital Visit - No Puppets</value>
    </filters>
    <label>Hospital Visits QLD - no Puppets</label>
    <sharedTo></sharedTo>
</ListView>