force-app/main/default/objects/PuppetShow__c/listViews/Hospital_Visits_This_Week.listView-meta.xml
<ListView>
    <fullName>Hospital_Visits_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Show_Date__c</columns>
    <columns>Venue__c</columns>
    <columns>Show_Type__c</columns>
    <columns>Venue_State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Show_Type__c</field>
        <operation>equals</operation>
        <value>Hospital Visit,Hospital Visit - No Puppets</value>
    </filters>
    <filters>
        <field>Show_Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Hospital Visits This Week</label>
</ListView>